# sketchybar-config

./: .envrc  Cargo.toml  flake.nix  justfile
.github/workflows/: build_nix.yml  ci.yml  release.yml
src/: api.rs  daemon.rs  events.rs  keyboard_ffi.rs  lib.rs  main.rs  media_ffi.rs  path.rs  settings.rs  sketchybar.rs  themes.rs  watcher.rs
src/api/: bar.rs  builder.rs  components.rs  event.rs  exec.rs  item.rs  mod.rs  props.rs  types.rs
src/items/: apple.rs  battery.rs  bluetooth.rs  clock.rs  cpu.rs  keyboard_layout.rs  media.rs  mod.rs  network.rs  volume.rs  weather.rs  workspaces.rs
src/props/: bar.rs  components.rs  item.rs  mod.rs  types.rs
