[package]
name = "sketchybarrc"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/larpios/sketchybar-config"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
block2 = "0.6"
btleplug = "0.12"
chrono = "0.4.44"
core-foundation = "0.10"
futures = "0.3"
image = "0.25.10"
local-ip-address = "0.6.12"
media-remote = "0.3.7"
serde_json = "1.0"
ureq = "3.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
]
